html file chnged

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML BASICS</title>
+    <link rel=""stylesheet" href="style.css">
     <style>
         div{
             background-color: rgb(244, 169, 169);
@@ -51,7 +52,7 @@
       <label for="Message">MESSAGE:</label>
       <textarea name="message" id="message" cols="30" rows="10"></textarea
         ><br><br>
-        <label for="country">COUNTRY:</label>
+        <label for="country">COUNTRY hdgiuwfhgi:</label>
         <select name="country" id="country">
             <option selected disabled >SELECT AN OPTION</option>
             <option value="india">INDIA</option>    
@@ -63,3 +64,5 @@
     </form>
 </body>
 </html>
+
+
